--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">finalApp</string>
     <string name="categories">Categories</string>
+    <string name="select_any_movies_from_different_categories">Select any movies from different categories</string>
+    <string name="welcome_to_moviepix">Welcome To MoviePix</string>
+    <string name="click_on_your_favorite_movie">Click on your favorite movie.</string>
+    <string name="watch_and_read_about_the_selected_movie">Watch and read about the selected movie.</string>
+    <string name="step_3">Step 3:</string>
+    <string name="step_2">Step 2:</string>
+    <string name="step_1">Step 1:</string>
 </resources>
